# CloudFileSystem

./: README.md
src/: CMakeLists.txt  Makefile  README  cmd
src/archive-lib/: .gitignore  CMakeLists.txt  archive_example.cc  archive_util.cc  archive_util.h  path.h.in
src/archive-lib/example-data/dir/dir2/: bar.txt
src/aws/: README.aws
src/cloud-lib/: cloudapi.cc  cloudapi.h  cloudapi_print.cc
src/cloudfs/: buffer_file.cc  buffer_file.h  cache_replacer.cc  cache_replacer.h  chunk_splitter.cc  chunk_splitter.h  chunk_table.cc  chunk_table.h  cloudfs.cc  cloudfs.h  cloudfs_controller.cc  cloudfs_controller.h  data.cc  data.h  metadata.cc  metadata.h  snapshot.cc  snapshot.h  util.cc  util.h
src/cmake/: Findfuse.cmake  Finds3.cmake
src/dedup-lib/: CMakeLists.txt  Makefile  msb.cc  msb.h  rabin-example.cc  rabinpoly.cc  rabinpoly.h
src/s3-server/: README.INTERNAL  run_server  s3cli.sh  s3server.py
src/scripts/: functions.sh  paths.sh  snapshot
src/snapshot/: CMakeLists.txt
src/src/cloudfs/: cloudfs_controller.cc
src/tests/checkpoint_1/mytest0/: mytest0.sh
src/tests/checkpoint_1/test_1_1/: test_1_1.sh
src/tests/checkpoint_1/test_1_2/: test_1_2.sh
src/tests/checkpoint_2/test_2_1/: test_2_1.sh
src/tests/checkpoint_2/test_2_14/: test_2_14.sh
src/tests/checkpoint_2/test_2_15/: test_2_15.sh
src/tests/checkpoint_2/test_2_16/: file_b  test_2_16.sh
src/tests/checkpoint_2/test_2_17/: file_a  file_b  test_2_16.sh
src/tests/checkpoint_2/test_2_2/: test_2_2.sh
src/tests/checkpoint_2/test_2_3/: test_2_3.sh
src/tests/checkpoint_2/test_2_4/: test_2_4.sh
src/tests/checkpoint_2/test_2_5/: test_2_5.sh
src/tests/checkpoint_3/test_3_1/: test_3_1.sh
src/tests/checkpoint_3/test_3_2/: test_3_2.sh
src/tests/checkpoint_3/test_3_20/: test_3_20.sh
src/tests/checkpoint_3/test_3_21/: largefile  test_3_21.sh
src/tests/checkpoint_3/test_3_25/: offsets_output.txt  test_3_25.sh
src/tests/checkpoint_3/test_3_3/: test_3_3.sh
src/tests/checkpoint_3/test_3_4/: test_3_4.sh
